# tutti_services

backend/: pyproject.toml
backend/app/: database.py  main.py
backend/app/routers/: auth.py  categories.py  orders.py  products.py  promotions.py  uploads.py  users.py
backend/app/utils/: auth.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/context/: AuthContext.tsx  CartContext.tsx
frontend/src/pages/: AdminPage.tsx  CatalogPage.tsx  CheckoutPage.tsx  LandingPage.tsx  LoginPage.tsx  OrdersPage.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
